--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
   "description": "Scan an S3 folder's contents",
   "main": "index.js",
   "scripts": {
-    "test": "tape test/*.test.js"
+    "test": "tape test/*.test.js",
+    "docs": "documentation -f md > api.md"
+  },
+  "bin": {
+    "s3purge": "bin/s3purge.js",
+    "s3keys": "bin/s3keys.js"
   },
   "author": "Mapbox",
   "license": "ISC",
   "dependencies": {
+    "agentkeepalive": "^2.0.3",
     "aws-sdk": "^2.1.40",
     "queue-async": "^1.0.7",
-    "s3urls": "^1.3.0"
+    "s3urls": "^1.3.0",
+    "split": "^1.0.0"
   },
   "devDependencies": {
-    "tape": "^4.0.1"
+    "documentation": "^2.1.0-alpha2",
+    "tape": "^4.0.1",
+    "underscore": "^1.8.3"
   }
 }
