--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "s3scan",
   "version": "0.0.1",
-  "description": "Scan an S3 folder's contents",
+  "description": "Streaming operations on S3 objects",
   "main": "index.js",
   "scripts": {
     "test": "tape test/*.test.js",
@@ -13,6 +13,14 @@
   },
   "author": "Mapbox",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mapbox/s3scan.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mapbox/s3scan/issues"
+  },
+  "homepage": "https://github.com/mapbox/s3scan#readme",
   "dependencies": {
     "agentkeepalive": "^2.0.3",
     "aws-sdk": "^2.1.40",
@@ -21,7 +29,7 @@
     "split": "^1.0.0"
   },
   "devDependencies": {
-    "documentation": "^2.1.0-alpha2",
+    "documentation": "^2.0.1",
     "tape": "^4.0.1",
     "underscore": "^1.8.3"
   }
