--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "agentkeepalive": "^2.0.3",
     "aws-sdk": "^2.1.40",
-    "queue-async": "^1.0.7",
+    "queue-async": "1.0.7",
     "s3urls": "^1.3.0",
     "split": "^1.0.0"
   },
