--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Streaming operations on S3 objects",
   "main": "index.js",
   "scripts": {
-    "test": "tape test/*.test.js",
+    "test": "eslint lib index.js && tape test/*.test.js",
     "docs": "documentation -f md > api.md"
   },
   "bin": {
@@ -31,6 +31,8 @@
   "devDependencies": {
     "documentation": "^2.0.1",
     "tape": "^4.0.1",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "eslint": "~1.00.0",
+    "eslint-config-unstyled": "^1.1.0"
   }
 }
