--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "bin": {
     "s3purge": "bin/s3purge.js",
-    "s3keys": "bin/s3keys.js"
+    "s3keys": "bin/s3keys.js",
+    "s3scan": "bin/s3scan.js"
   },
   "author": "Mapbox",
   "license": "ISC",
@@ -24,6 +25,7 @@
   "dependencies": {
     "agentkeepalive": "^2.0.3",
     "aws-sdk": "^2.2.35",
+    "minimist": "~1.2.0",
     "queue-async": "1.0.7",
     "s3urls": "^1.3.0",
     "split": "^1.0.0"
