--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "agentkeepalive": "^2.0.3",
     "aws-sdk": "^2.2.35",
     "minimist": "~1.2.0",
+    "parallel-stream": "^1.1.2",
     "queue-async": "1.0.7",
     "s3urls": "^1.3.0",
     "split": "^1.0.0"
