--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.2.3",
   "description": "Streaming operations on S3 objects",
   "main": "index.js",
+  "engines": {
+    "node": "^6.0.0"
+  },
   "scripts": {
     "test": "eslint lib index.js && tape test/*.test.js",
     "docs": "documentation -f md > api.md"
