--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.2.3",
   "description": "Streaming operations on S3 objects",
   "main": "index.js",
+  "engines": {
+    "node": "^6.0.0"
+  },
   "scripts": {
     "test": "eslint lib index.js && tape test/*.test.js",
-    "docs": "documentation -f md > api.md"
+    "docs": "documentation build -f md > api.md"
   },
   "bin": {
     "s3purge": "bin/s3purge.js",
@@ -23,18 +26,18 @@
   },
   "homepage": "https://github.com/mapbox/s3scan#readme",
   "dependencies": {
-    "agentkeepalive": "^2.0.3",
-    "aws-sdk": "^2.2.35",
-    "minimist": "~1.2.0",
-    "queue-async": "1.0.7",
-    "s3urls": "^1.3.0",
+    "aws-sdk": "^2.49.0",
+    "minimist": "^1.2.0",
+    "parallel-stream": "^1.1.2",
+    "s3urls": "^1.5.2",
     "split": "^1.0.0"
   },
   "devDependencies": {
-    "documentation": "^2.0.1",
-    "tape": "^4.0.1",
-    "underscore": "^1.8.3",
-    "eslint": "~1.00.0",
-    "eslint-config-unstyled": "^1.1.0"
+    "d3-queue": "^3.0.7",
+    "documentation": "^4.0.0-rc.1",
+    "eslint": "^3.19.0",
+    "eslint-config-unstyled": "^1.1.0",
+    "tape": "^4.6.3",
+    "underscore": "^1.8.3"
   }
 }
