--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "^6.0.0"
   },
   "scripts": {
+    "build": "npx tsc",
     "test": "eslint lib index.js && tape test/*.test.js",
     "docs": "documentation build -f md > api.md"
   },
@@ -27,12 +28,17 @@
   "homepage": "https://github.com/mapbox/s3scan#readme",
   "dependencies": {
     "aws-sdk": "^2.49.0",
+    "commander": "^11.0.0",
+    "figlet": "^1.6.0",
     "minimist": "^1.2.0",
     "parallel-stream": "^1.1.2",
     "s3urls": "^1.5.2",
-    "split": "^1.0.0"
+    "split": "^1.0.0",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/figlet": "^1.5.6",
+    "@types/node": "^20.5.9",
     "d3-queue": "^3.0.7",
     "documentation": "^8.0.2",
     "eslint": "^5.2.0",
