--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Streaming operations on S3 objects",
   "main": "index.js",
   "engines": {
-    "node": "^6.0.0"
+    "node": "^18.0.0"
   },
   "scripts": {
     "test": "eslint lib index.js && tape test/*.test.js",
@@ -26,18 +26,18 @@
   },
   "homepage": "https://github.com/mapbox/s3scan#readme",
   "dependencies": {
-    "aws-sdk": "^2.49.0",
-    "minimist": "^1.2.0",
+    "aws-sdk": "^2.1479.0",
+    "docs": "^0.3.2-canary.0",
+    "minimist": "^1.2.8",
     "parallel-stream": "^1.1.2",
     "s3urls": "^1.5.2",
     "split": "^1.0.0"
   },
   "devDependencies": {
     "d3-queue": "^3.0.7",
-    "documentation": "^8.0.2",
-    "eslint": "^5.2.0",
-    "eslint-config-unstyled": "^1.1.0",
+    "documentation": "^14.0.2",
+    "eslint": "^8.52.0",
     "tape": "^4.6.3",
-    "underscore": "^1.8.3"
+    "underscore": "^1.13.6"
   }
 }
