--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,8 @@
   "extends": "eslint:recommended",
   "env": {
     "node": true
+  },
+  "parserOptions": {
+        "ecmaVersion": "latest"
   }
 }
