--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": "^18.0.0"
   },
   "scripts": {
-    "test": "eslint lib index.js && tape test/*.test.js",
+    "test": "eslint lib index.js",
+    "test-local": "tape test/*.test.js",
     "docs": "documentation build -f md > api.md"
   },
   "bin": {
@@ -29,7 +30,7 @@
     "aws-sdk": "^2.1479.0",
     "minimist": "^1.2.8",
     "parallel-stream": "^1.1.2",
-    "s3urls": "^1.5.2",
+    "@mapbox/s3urls": "^2.0.0",
     "split": "^1.0.0"
   },
   "devDependencies": {
