--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
   },
   "homepage": "https://github.com/mapbox/s3scan#readme",
   "dependencies": {
-
-    "aws-sdk": "^2.1479.0",
+    "@aws-sdk/client-s3": "^3.0.0",
     "minimist": "^1.2.8",
     "parallel-stream": "^1.1.2",
     "@mapbox/s3urls": "^2.0.0",
