--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/mapbox/s3scan#readme",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.0.0",
+    "@smithy/node-http-handler": "^4.1.0",
     "minimist": "^1.2.8",
     "parallel-stream": "^1.1.2",
     "split": "^1.0.0"
